[tool.poetry]
name = "sqreentest"
version = "0.1.0"
description = ""
authors = ["Victor Hiairrassary <victor.hiairrassary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
sqreen = "^1.16"
python-dotenv = "^0.10.3"
mypy = "^0.740.0"
twilio = "^6.33"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8"
pylint = "^2.4"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[tool.black]
line-length = 120
target-version = ['py37']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

